# rusty-vulkan-first-triangle

./: Cargo.toml  README.md
src/: compileshaders.bat  config.rs  device.rs  frag.spv  loaders.rs  main.rs  perframe.rs  renderer.rs  shader.frag  shader.vert  swapsurface.rs  util.rs  vert.spv  window.rs
