[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ash="0.37"
#ash-window="0.10"
ash={ git = "https://github.com/MaikKlein/ash", ref="2a9a59e" }
ash-window={ git = "https://github.com/MaikKlein/ash", ref="2a9a59e" }
winit="0.26.1"
anyhow="1.0"
pretty_env_logger="*"
log="*"
