[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash={ git = "https://github.com/MaikKlein/ash", rev="c4f1c053ea36e4de91094c63109eeda677ca3ecf" }
ash-window={ git = "https://github.com/MaikKlein/ash", rev="c4f1c053ea36e4de91094c63109eeda677ca3ecf" }
winit="*"
anyhow="1.0"
pretty_env_logger="*"
log="*"
safe-transmute= "*"
glam="*"
memoffset="*"
rand= "*"
num="*"